--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "bluebird": "^3.3.1",
     "express": "^4.13.4",
     "lodash": "^4.3.0",
+    "moment": "^2.11.2",
     "rss": "^1.2.1",
+    "sequelize": "^3.19.2",
+    "sqlite3": "^3.1.1",
     "twit": "^2.2.2",
     "twitter-text": "^1.13.3",
     "winston": "^2.1.1"
