--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bluebird": "^3.3.1",
     "express": "^4.13.4",
+    "jade": "^1.11.0",
     "lodash": "^4.3.0",
     "moment": "^2.11.2",
     "rss": "^1.2.1",
