--- a/package.json
+++ b/package.json
@@ -17,16 +17,15 @@
   },
   "homepage": "https://github.com/gustavpursche/twrrs#readme",
   "dependencies": {
-    "bluebird": "^3.3.1",
+    "bluebird": "^3.3.3",
     "express": "^4.13.4",
     "jade": "^1.11.0",
-    "lodash": "^4.3.0",
+    "lodash": "^4.6.1",
     "moment": "^2.11.2",
     "rss": "^1.2.1",
-    "sequelize": "^3.19.2",
+    "sequelize": "^3.19.3",
     "sqlite3": "^3.1.1",
     "twit": "^2.2.2",
-    "twitter-text": "^1.13.3",
-    "winston": "^2.1.1"
+    "twitter-text": "^1.13.4"
   }
 }
