Nginx: Apply H2 to www.

--- a/twrss-nginx.conf
+++ b/twrss-nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name twrss.net;
+  server_name twrss.net www.twrss.net;
   return 301 https://twrss.net$request_uri;
 }
 
@@ -38,7 +38,7 @@ server {
   gzip_http_version 1.1;
   gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
 
-  server_name twrss.net;
+  server_name twrss.net www.twrss.net;
 
   location / {
       proxy_pass http://127.0.0.1:4000;
